crates/next-custom-transforms/tests/errors/react-server-components/client-graph/root-params/input.js
// This is a comment.

'use strict'

/**
 * This is a comment.
 */

import { unstable_rootParams } from 'next/server'

export default function () {
  return null
}
